[gd_scene load_steps=3 format=3 uid="uid://byvyax4fpo7sj"]

[ext_resource type="Script" path="res://menu.gd" id="1_sfawf"]
[ext_resource type="Texture2D" uid="uid://c0apty3jxqhvy" path="res://Background.png" id="2_nqdw3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sfawf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -33.0
offset_right = 35.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer"]
texture_filter = 1
position = Vector2(45, 60)
scale = Vector2(4.99653, 5.12346)
texture = ExtResource("2_nqdw3")

[node name="startButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
text = "Start"

[node name="optionsButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="shopButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Shop"

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 2
offset_left = 956.0
offset_top = 520.0
offset_right = 1177.0
offset_bottom = 608.0
scale = Vector2(5, 5)
text = "Infinite Runner"

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/shopButton" to="." method="_on_shop_button_pressed"]
